Remove red outlines used to show potential overflow issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@
     margin: 0;
     box-sizing: border-box;
     color: #34454A;
-    outline:solid 1px #f00 !important;
 }
 
 h2 {
